{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 15,
  "lineage": "383456c4-7f88-51f5-e0f5-52521cd9e625",
  "resources": [
    {
      "module": "module.custom-vpc[\"10.0.0.0/21\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:vpc/vpc-0c85fe7e05d923e6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0cb002b7ebe04e368",
            "default_route_table_id": "rtb-07eda5a9246329504",
            "default_security_group_id": "sg-06f040f8e45c0156f",
            "dhcp_options_id": "dopt-092a21c4f88c657d5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c85fe7e05d923e6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07eda5a9246329504",
            "owner_id": "209479272412",
            "tags": {
              "Name": "my vpc"
            },
            "tags_all": {
              "Name": "my vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.route-table[\"0\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-08fd49354a55cc9b0",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table"
            },
            "tags_all": {
              "Name": "route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c85fe7e05d923e6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups[\"mysecuritygroup1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:security-group/sg-099feb17a936649c6",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-099feb17a936649c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mysecuritygroup1",
            "name_prefix": "",
            "owner_id": "209479272412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c85fe7e05d923e6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"10.0.0.0/21\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:subnet/subnet-0a9b8a8f696a6a383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9b8a8f696a6a383",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479272412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my subnet"
            },
            "tags_all": {
              "Name": "my subnet"
            },
            "vpc_id": "vpc-0c85fe7e05d923e6c"
          },
          "dependencies": [
            "module.custom-vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}